# BananaGuard

./: README.md  docker-compose.mac.yml  docker-compose.yml  init-ollama.sh  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/backend/: main.py  pyproject.toml
backend/src/backend/core/: constants.py  load_model.py  logger.py
backend/src/backend/enums/: disease_type.py
backend/src/backend/routers/: detect.py  insights.py
backend/src/backend/schemas/: disease_percentage.py  insight_request.py  insight_response.py
backend/src/backend/services/: load_model.py  predict_disease.py  preprocess_image.py
backend/src/schemas/: disease_percentage.py
frontend/: .gitignore  Dockerfile  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.storybook/: main.ts
frontend/src/: main.tsx
frontend/src/atoms/: index.ts  sample-questions-atom.ts
frontend/src/components/: analysis-summary.tsx  detection-input.tsx  detection-item.stories.tsx  detection-item.tsx  navbar.tsx  onboarding.tsx  pending-detection-item.tsx
frontend/src/config/: site.ts
frontend/src/enums/: disease.enum.ts
frontend/src/hooks/: use-detect.tsx  use-insight.tsx
frontend/src/layouts/: default.tsx
frontend/src/pages/: index.tsx
frontend/src/services/: backend.service.ts  llm.service.ts  llm.service.ts.ts
frontend/src/stories/: Button.tsx  Header.tsx  Page.stories.ts  Page.tsx
frontend/src/types/: analysis-result.types.ts  ask-llm-response.ts  detect-disease-response.types.ts  detection-item.types.ts  insight-params.types.ts  insight-result.types.ts
llm/: .gitignore  Dockerfile  pyproject.toml
llm/data/: diseases.md
llm/data/main/: diseases.md
llm/src/llm/: embeddings.py  main.py  populate.py  query.py
llm/src/llm/core/: logger.py
llm/src/llm/enums/: disease_percentage.py
llm/src/llm/routers/: ask.py  insight.py  query.py  rag.py
llm/src/llm/schemas/: rag_request.py  rag_response.py
llm/src/llm/templates/: analysis_insight.py  follow_up.py  general_inquiry.py  prompt_builder.py  template_types.py
model/: banana_leaf_model.h5  banana_leaf_model.keras
src/: main.py
src/enums/: disease_type.py
src/routers/: detect.py  insights.py
src/schemas/: disease_percentage.py  insight_request.py  insight_response.py
