[project]
name = "bananaguardapi"
version = "0.1.0"
description = ""
authors = [
    {name = "lonewanderer27",email = "adrianejames27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "certifi (==2025.8.3)",
    "click (==8.3.0)",
    "dnspython (==2.8.0)",
    "email-validator (==2.3.0)",
    "fastapi (==0.117.1)",
    "fastapi-cli (==0.0.13)",
    "fastapi-cloud-cli (==0.2.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.4.0)",
    "pydantic (==2.11.9)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "python-dotenv (==1.1.1)",
    "python-multipart (==0.0.20)",
    "pytokens (==0.1.10)",
    "pyyaml (==6.0.3)",
    "rich (==14.1.0)",
    "rich-toolkit (==0.15.1)",
    "rignore (==0.6.4)",
    "sentry-sdk (==2.39.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "starlette (==0.48.0)",
    "typer (==0.19.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.37.0)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.1.0)",
    "websockets (==15.0.1)",
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
