[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=1.0.0,<2.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "chromadb (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "llm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
