[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.0.2,<2.0.0)",
    "pypdf (>=6.1.3,<7.0.0)",
    "chromadb (>=1.2.1,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-community (>=0.4,<0.5)"

]

[tool.poetry]
packages = [{include = "llm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
